tests/closure/closure.exp
Error ------------------------------------------------------------------------------------------------- Closure.js:17:14

Cannot call `takes_string` with `global_x` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:17:14
   17| takes_string(global_x); // error (can't distinguish between calls to global_f and global_g)
                    ^^^^^^^^

References:
   Closure.js:14:34
   14| function global_g() { global_x = 42; } // blame
                                        ^^ [1]
   Closure.js:6:25
    6| function takes_string(_:string) { }
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:20:14

Cannot call `takes_string` with `global_x` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:20:14
   20| takes_string(global_x);
                    ^^^^^^^^

References:
   Closure.js:14:34
   14| function global_g() { global_x = 42; } // blame
                                        ^^ [1]
   Closure.js:6:25
    6| function takes_string(_:string) { }
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:35:16

Cannot call `takes_string` with `local_x` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:35:16
   35|   takes_string(local_x); // error (can't distinguish between calls to local_f and local_g)
                      ^^^^^^^

References:
   Closure.js:32:34
   32|   function local_g() { local_x = 42; } // blame
                                        ^^ [1]
   Closure.js:6:25
    6| function takes_string(_:string) { }
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:38:16

Cannot call `takes_string` with `local_x` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:38:16
   38|   takes_string(local_x); // error
                      ^^^^^^^

References:
   Closure.js:32:34
   32|   function local_g() { local_x = 42; } // blame
                                        ^^ [1]
   Closure.js:6:25
    6| function takes_string(_:string) { }
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:54:14

Cannot call `takes_string` with `global_y` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:54:14
   54| takes_string(global_y); // error (can't distinguish between calls to global_o.f and global_o.g)
                    ^^^^^^^^

References:
   Closure.js:50:30
   50|   g: function() { global_y = 42; } // blame
                                    ^^ [1]
   Closure.js:6:25
    6| function takes_string(_:string) { }
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:57:14

Cannot call `takes_string` with `global_y` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:57:14
   57| takes_string(global_y); // error
                    ^^^^^^^^

References:
   Closure.js:50:30
   50|   g: function() { global_y = 42; } // blame
                                    ^^ [1]
   Closure.js:6:25
    6| function takes_string(_:string) { }
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:74:16

Cannot call `takes_string` with `local_y` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:74:16
   74|   takes_string(local_y); // error (can't distinguish between calls to local_o.f and local_o.g)
                      ^^^^^^^

References:
   Closure.js:70:31
   70|     g: function() { local_y = 42; } // blame
                                     ^^ [1]
   Closure.js:6:25
    6| function takes_string(_:string) { }
                               ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- Closure.js:77:16

Cannot call `takes_string` with `local_y` bound to `_` because number [1] is incompatible with string [2].
[incompatible-call]

   Closure.js:77:16
   77|   takes_string(local_y); // error
                      ^^^^^^^

References:
   Closure.js:70:31
   70|     g: function() { local_y = 42; } // blame
                                     ^^ [1]
   Closure.js:6:25
    6| function takes_string(_:string) { }
                               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- cond_havoc.js:12:10

Cannot return `x` because string [1] is incompatible with number [2]. [incompatible-return]

   cond_havoc.js:12:10
   12|   return x; // error, string ~/~> number (return type anno) TODO
                ^

References:
   cond_havoc.js:8:22
    8|   function f() { x = "" }
                            ^^ [1]
   cond_havoc.js:6:28
    6| function example(b: bool): number {
                                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- const.js:20:38

Cannot assign `var_x` to `y` because null or undefined [1] is incompatible with number [2]. [incompatible-type]

   const.js:20:38
   20|     call_me = () => { var y:number = var_x; };  // error
                                            ^^^^^

References:
   const.js:9:15
    9| function g(x: ?number) {
                     ^^^^^^^ [1]
   const.js:20:29
   20|     call_me = () => { var y:number = var_x; };  // error
                                   ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- const.js:20:38

Cannot assign `var_x` to `y` because null [1] is incompatible with number [2]. [incompatible-type]

   const.js:20:38
   20|     call_me = () => { var y:number = var_x; };  // error
                                            ^^^^^

References:
   const.js:22:11
   22|   var_x = null;
                 ^^^^ [1]
   const.js:20:29
   20|     call_me = () => { var y:number = var_x; };  // error
                                   ^^^^^^ [2]



Found 11 errors
